--- a/.env.example
+++ b/.env.example
@@ -49,7 +49,7 @@ MAIL_ENABLE=1
 MAIL_HOST=''
 
 # SMTP 端口号 SMTP port
-MAIL_PORT=''
+MAIL_PORT=0
 
 # 邮件加密方式 Email encryption method
 MAIL_ENCRYPTION=''
